@@ -470,3 +470,4 @@
 	- fixed memory leak in create_cfg() when creating a .cfg file
 	- merged redundant dipswitch/configuration parsing code into parse_listxml_element_cfg()
 	- added enum cfg_type for .cfg entry type parameter
+	- added option "use_softwarelist" to control usage of software lists
